added deply configs